--- a/shepherding.yaml
+++ b/shepherding.yaml
@@ -1,11 +1,11 @@
 # TODO: match the colours to the actual colours in SUSU
 shepherds:
   - name: "Shepherd Level 2 Bar"
-    colour: 'mediumpurple'
+    colour: 'palegreen'
     regions: [level-2-bar]
   - name: "Shepherd Level 3 South"
-    colour: 'lightgreen'
+    colour: 'lightpink'
     regions: [level-3-south]
   - name: "Shepherd Level 3 North"
-    colour: 'lightblue'
+    colour: 'lemonchiffon'
     regions: [level-3-north]
