--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,8 +2,8 @@ name: Validate
 
 on:
   push:
-    branches:
-      - master
+#     branches:
+#       - master
   pull_request:
 
 jobs:
@@ -12,5 +12,5 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-
+      - run: pwd
       - uses: PeterJCLaw/srcomp-validate-action@v0.2
